// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accountId 1`] = `
AccountID {
  "address": "5CXU7u72Gz9Jqo6FdAwzSsxX5JhdRwMj2UZ4xrAEoo3AyySx",
  "chainId": ChainID {
    "namespace": "polkadot",
    "reference": "b0a8d493285c2df73290dfb7e61f870f",
  },
}
`;

exports[`createLink create proof with ed25519 1`] = `
Object {
  "account": "5EEvMbuaJQxxPorGtzY2qUYqM3akRrnD36bZD4PomfpLdrtx@polkadot:b0a8d493285c2df73290dfb7e61f870f",
  "did": "did:3:bafysdfwefwe",
  "message": "Link this account to your identity

did:3:bafysdfwefwe 
Timestamp: 666",
  "signature": "0x96e635144efbab08a6118d54dc7477780e04a47c7eee636e27a3631617ed6ec7629447fe5cabbadfd57095fe453c9c3ab26a0831e70b7199994bcf707c453108",
  "timestamp": 666,
  "type": "eoa",
  "version": 2,
}
`;

exports[`createLink create proof with secp256k 1`] = `
Object {
  "account": "5GuAnwx9uKSQxKZB8moxoaX4ceehoCYu4XYMjJkKtm2QDgqC@polkadot:b0a8d493285c2df73290dfb7e61f870f",
  "did": "did:3:bafysdfwefwe",
  "message": "Link this account to your identity

did:3:bafysdfwefwe 
Timestamp: 666",
  "signature": "0x4f3ad24e9d2842b5fb0fd8de9cc17191ba129780613d65268253d0657ba58626ee4511f6827c555b1fe15df74ef19e8c89cf3357f39b12086c3a73f467411ce200",
  "timestamp": 666,
  "type": "eoa",
  "version": 2,
}
`;

exports[`createLink create proof with sr25519 1`] = `"5CXU7u72Gz9Jqo6FdAwzSsxX5JhdRwMj2UZ4xrAEoo3AyySx@polkadot:b0a8d493285c2df73290dfb7e61f870f"`;

exports[`createLink create proof with sr25519 2`] = `
"Link this account to your identity

did:3:bafysdfwefwe 
Timestamp: 666"
`;

exports[`createLink create proof with sr25519 3`] = `"eoa"`;
